--- a/src/components/TodoButtons/TodoButtons.css
+++ b/src/components/TodoButtons/TodoButtons.css
@@ -2,5 +2,6 @@
     display: flex;
     flex-direction: column;
     gap: 30px;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
